src/assets/styles/collections/_guidelines.css
.barrier .banner,
.barriers .banner,
.guidelines .banner,
.process .banner,
.processes .banner {
    background-color: var(--fl-bgColor, var(--color-indigo-200));
    color: var(--fl-fgColor, var(--color-black));
}

[type="search"]::-webkit-search-cancel-button {
    appearance: none;
}

.guidelines-search .banner {
 background-color: var(--fl-bgColor, var(--color-indigo-200));
 color: var(--fl-fgColor, var(--color-indigo-700));
}

.strategy-tip .banner {
    background-color: var(--fl-bgColor, var(--color-indigo-800));
    color: var(--fl-fgColor, white);
}

.barriers .banner h1 {
    color: var(--fl-fgColor, var(--color-indigo-800));
}

.stage-1 .banner {
    background-color: var(--fl-bgColor, var(--color-guidelines-red-light));
}

.stage-2 .banner {
    background-color: var(--fl-bgColor, var(--color-guidelines-orange-light));
}

.stage-3 .banner {
    background-color: var(--fl-bgColor, var(--color-guidelines-yellow-light));
}

.stage-4 .banner {
    background-color: var(--fl-bgColor, var(--color-guidelines-green-light));
}

.stage-5 .banner {
    background-color: var(--fl-bgColor, var(--color-guidelines-blue-light));
}

.barrier nav,
.barrier article,
.guidelines nav,
.guidelines article,
.process nav,
.process article,
.strategy-tip nav,
.strategy-tip article {
    box-shadow: inset 0 -0.1875rem 0 0 var(--fl-fgColor, transparent);
}

.barrier nav,
.guidelines nav,
.process nav,
.strategy-tip nav {
    background-color: var(--fl-bgColor, var(--color-indigo-100));
}

.barrier nav > h2,
.guidelines nav > h2,
.process nav > h2,
.strategy-tip nav > h2 {
    display: none;
}

.barrier inclusive-disclosure h3,
.process inclusive-disclosure h3,
.strategy-tip inclusive-disclosure h3 {
    font-size: var(--step-2);
    font-weight: var(--font-weight-semibold);
    margin-block-end: var(--flow-space, 1em);
}

.strategy-tip inclusive-disclosure {
    color: var(--fl-fgColor, var(--color-indigo-700));
}

.strategy-processes {
    align-items: center;
    display: flex;
}

.barrier nav inclusive-disclosure,
.guidelines nav inclusive-disclosure,
.process nav inclusive-disclosure,
.strategy-tip nav inclusive-disclosure {
    padding-inline: 0;
}

.barrier nav inclusive-disclosure > *,
.guidelines nav inclusive-disclosure > *,
.process nav inclusive-disclosure > *,
.strategy-tip nav inclusive-disclosure > * {
    padding-inline: var(--common-inline-padding);
}

.barrier nav inclusive-disclosure [aria-expanded],
.guidelines nav inclusive-disclosure [aria-expanded],
.process nav inclusive-disclosure [aria-expanded],
.strategy-tip nav inclusive-disclosure [aria-expanded] {
    box-shadow: none;
}

.barrier nav inclusive-disclosure [aria-expanded]::after,
.guidelines nav inclusive-disclosure [aria-expanded]::after,
.process nav inclusive-disclosure [aria-expanded]::after,
.strategy-tip nav inclusive-disclosure [aria-expanded]::after {
    right: var(--common-inline-padding);
}

.processes-strategies-and-tips,
.strategies-target-barriers {
    padding-inline-start: 1.25rem;
}

.strategy-tip .icon {
    margin-inline: 1rem;
}

.guidelines search,
.guidelines-search search {
	display: flex;
	flex-direction: column;
	gap: var(--step-2);
	position: relative;

	&::before {
       	background-color: var(--fl-linkFgColor, var(--color-indigo-800));
       	content: "";
        display: block;
       	height: 22px;
        left: 20px;
        mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='22' height='22' fill='none'%3E%3Cpath stroke='black' stroke-linecap='round' stroke-linejoin='round' stroke-width='2.5' d='m20.282 20.25-5.494-5.486m0 0a7.91 7.91 0 0 0 0-11.195 7.937 7.937 0 0 0-11.215 0 7.91 7.91 0 0 0 0 11.195 7.937 7.937 0 0 0 11.215 0Z'/%3E%3C/svg%3E");
       	position: absolute;
        top: 20px;
        width: 22px;
        z-index: 1;
    }

	input {
		appearance: none;
		background-color: var(--fl-bgColor, var(--color-white));
		block-size: 3.75rem;
		border: 0;
    	border-radius: 0.3125rem;
     	box-shadow: inset 0 0 0 0.125rem var(--fl-linkFgColor, var(--color-indigo-700));
      	color: var(--fl-fgColor, var(--color-black));
      	padding-inline: var(--step-4) var(--step-1);

       &:focus {
      		box-shadow:
        		inset 0 0 0 0.125rem var(--fl-linkFgColor, var(--color-indigo-700)),
        		inset 0 0 0 .25rem var(--fl-linkBgColor, var(--color-white)),
          		inset 0 0 0 .375rem var(--fl-linkFgColor, var(--color-indigo-700));
            outline: solid 1px transparent;
       }
	}

	button {
		block-size: 3.75rem;
		min-width: calc(170 / 16 * 1rem);
	}
}

.barriers-container {
    background-color: var(--fl-bgColor, var(--color-indigo-100));
    padding-block: var(--common-block-padding);
    padding-inline: var(--common-inline-padding);
}

.barriers-head {
    display: flex;
    justify-content: space-between;
}

@media (width >= 70.875rem) {
    .barrier nav > h2,
    .guidelines nav > h2,
    .process nav > h2,
    .strategy-tip nav > h2 {
        display: block;
    }

    .barrier nav inclusive-disclosure > *,
    .guidelines nav inclusive-disclosure > *,
    .process nav inclusive-disclosure > *,
    .strategy-tip nav inclusive-disclosure > * {
        padding-inline: 0;
    }

    .barrier nav inclusive-disclosure [aria-expanded],
    .guidelines nav inclusive-disclosure [aria-expanded],
    .process nav inclusive-disclosure > [aria-expanded],
    .strategy-tip nav inclusive-disclosure > [aria-expanded] {
        display: none;
    }

    .barrier nav inclusive-disclosure [aria-expanded] + *,
    .guidelines nav inclusive-disclosure [aria-expanded] + *,
    .process nav inclusive-disclosure [aria-expanded] + *,
    .strategy-tip nav inclusive-disclosure [aria-expanded] + * {
        display: block;
    }

    .guidelines search,
    .guidelines-search search {
    	display: grid;
     	grid-template-columns: 1fr auto;
     	width: 100%;
    }
}

.barrier article,
.guidelines article
.process article,
.strategy-tip article {
    padding-block: 2.125rem 5rem;
    padding-inline: var(--common-inline-padding);
}

.barrier article > *,
.guidelines article > *,
.process article > *,
.strategy-tip article > *  {
    max-width: 41.875rem;
}

.barrier article > h2,
.guidelines article > h2,
.process article > h2,
.strategy-tip article > h2 {
    max-width: 100%;
}

.guidelines-search h2 {
	margin-block-start: calc(36 / 16 * 1rem);
}

.guidelines-search hr {
	border-block-end: 0;
	border-block-start: 1px solid var(--fl-fgColor, var(--color-indigo-700));
	margin-block: calc(50 / 16 * 1rem) 1rem;
}

.guidelines-search article {
	padding-inline: var(--common-inline-padding);
}

.search-results {
	max-inline-size: 55.9375rem;
}

.search-results li + li {
	margin-block-start: 2rem;
}

.search-results + .pagination {
	margin-block-start: 4rem;
}

.search-results__title em {
	align-items: center;
	display: flex;
	font-size: var(--step-2);
	gap: calc(12 / 16 * 1rem);
	margin-block: 0.75rem;
}

.processes .banner {
	position: relative;
	z-index: 1;
}

.processes article {
	overflow-y: hidden;
}

.processes section {
	position: relative;

	.stage-bg {
		left: 50%;
		position: absolute;
		top: 50%;
  		transform: translate(-50%, -50%);
	}

	.wrapper {
		position: relative;
		z-index: 2;
	}

	h2 + p {
		margin-block-start: var(--step-1);
	}

	.cards {
		margin-block-start: calc(48 / 16 * 1rem);
		position: relative;
	}
}

[class^="fl-theme"]:not(.fl-theme-prefsEditor-default) .stage-bg {
	display: none;
}

@media (width >= 70.875rem) {
    .barrier .content,
    .guidelines .content,
    .process .content,
    .strategy-tip .content {
        display: grid;
        grid-template-columns: 35% 65%;
        margin-inline: auto;
        max-width: 90rem;
        width: 100%;
    }

    .barrier nav,
    .barrier article,
    .guidelines nav,
    .guidelines article,
    .process nav,
    .process article,
    .strategy-tip nav,
    .strategy-tip article {
        padding-block: 8.4375rem;
    }

    .guidelines-search h2 {
    	margin-block-start: calc(64 / 16 * 1rem);
    }

    .guidelines-search hr {
		margin-block: calc(50 / 16 * 1rem);
    }

    .search-results li + li {
    	margin-block-start: 7.5rem;
    }

    .barrier nav,
    .guidelines nav,
    .process nav,
    .strategy-tip nav {
        padding-inline: 8.4375rem 5rem;
        position: relative;

        &::after {
            background-color: var(--fl-bgColor, var(--color-indigo-100));
            content: "";
            display: block;
            height: 100%;
            margin-inline-start: -100vw;
            position: absolute;
            top: 0;
            width: 100vw;
            z-index: -1;
        }
    }

    .barrier article,
    .guidelines article,
    .process article,
    .strategy-tip article {
        padding-inline: 8.4375rem;
    }
}

